--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
 <h1>I'm a header 1!</h1>
 This is the html content
+<img src="https://avatars.githubusercontent.com/u/84259186?v=4">
 </body>
 </html>
