--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 <h1>I'm a header 1!</h1>
 This is the html content
 <img src="https://avatars.githubusercontent.com/u/84259186?v=4">
+<ol>
+    <li>Facebook</li>
+    <li>Whatsapp</li>
+    <li>Instagram</li>
+</ol>
 </body>
 </html>
