--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 This is the html content
 <img src="https://avatars.githubusercontent.com/u/84259186?v=4">
 <ol>
-    <li>Facebook</li>
-    <li>Whatsapp</li>
-    <li>Instagram</li>
+    <li><a href="https://m.facebook.com/">Facebook</a></li>
+    <li><a href="https://www.whatsapp.com/">Whatsapp</a></li>
+    <li><a href="https://www.instagram.com/accounts/signup/phone?hl=en">Instagram</a></li>
 </ol>
 </body>
 </html>
